[package]
name = "restaurant-client-app"
version = "0.1.0"
authors = ["ShatakshiR <er.shatakshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
mongodb = "1.2.0"
rand = "0.8.3"